[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
thiserror = "1.0.60"
enum_dispatch = "0.3.13"
bytes = "1.6.0"
dashmap = "6.0.1"
lazy_static = "1.5.0"
tokio-util = { version="0.7.11", features=["codec"] }
tokio = { version = "1.37.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
] }
tokio-stream = "0.1.15"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }